# examples

frontend/: MODULE.bazel
frontend/next.js/: BUILD.bazel
